แก้ไข สังกัดคณะ selection ให้เลือกได้

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <tr>
                 <td><b>สังกัดคณะ</b></td>
                 <td>
-                    <select name="faculty" size="11">
+                    <select name="faculty">
+                        <option> </option>
                         <option>วิทยาศาสตร์</option>
                         <option>วิทยาการคอมพิวเตอร์</option>
                         <option>ครุศาสตร์</option>
